              its triangulation argument by const reference (not pointer), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
        Class PlugTriSolidTorus:
            - Class constants are now constexpr.
            - Routine chain() now returns a std::optional by const reference,
              not by pointer that could be null.
            - Routine isPlugTriSolidTorus() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Added comparison operators == and !=.
            - Deprecated clone().  Just use the copy constructor instead.
        Class Polynomial:
            - Added member and global swap() functions.
            - Changed divisionAlg() to return a pair instead of using
              reference arguments.  The old version is kept but deprecated.
        Class ProgressTracker, ProgressTrackerOpen:
            - Now derives from ShortOutput.
            - Many member functions are now const.
        Class Property<...>:
            - Removed completely.  Use either std::optional<...> or
              std::unique_ptr<...> instead (according to your storage policy).
            - Added a move constructor and move assignment operator.
            - Added a global swap() to complement the member swap().
            - Removed the StoreConstPtr storage policy, which was never used.
        Class Qitmask1, Qitmask2:
            - Added != operator to complement the already-existing == operator.
            - Routines get() and set() now use values of type uint8_t, not char.