@@ -58,6 +58,7 @@ void addPluggedTorusBundle(pybind11::module_& m) {
             &PluggedTorusBundle::recognise)
     ;
     regina::python::add_output(c);
+    regina::python::add_eq_operators(c);
 
     m.def("swap",
         (void(*)(PluggedTorusBundle&, PluggedTorusBundle&))(regina::swap));
